@@ -5,6 +5,7 @@ v1.4.0
 - Added Missing breaker esp color to settings
 - Added Search feature to the item manager
 - Added Search feature to keybind list
+- Added feature where cursor will be shown/hidden when you toggle the menu
 - Fixed Kill Nearby Enemies
 - Fixed EnemyFilter not working on esp/chams
 - Removed Basic GUISize
